Added in game configs